# companion

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.claude/commands/: companion.md  fg-analyze.md
.claude/hooks/: session-start.md
api/: main.py
feature_graph/api/: main.py
feature_graph/api/routes/: feedback.py
feature_graph/core/agents/: feature_extractor.py
feature_graph/core/engine/: core_engine.py  event_bus.py
feature_graph/graph/: neo4j_client.py
feature_graph/sdk/base/: parser_plugin.py  runtime_plugin.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/feature/[id]/: SubGraph.tsx  page.tsx
frontend/components/: AnalysisLauncher.tsx  DocViewer.tsx  HierarchyPanel.tsx  ProjectSwitcher.tsx  QuickStart.tsx
frontend/components/AIChatInterface/: AIChatInterface.tsx
frontend/components/FeatureExplorer/: FeatureDetailPanel.tsx  FeatureExplorer.tsx  GroupNode.tsx  TourPanel.tsx
frontend/lib/: architectureLayout.ts  groupLayout.ts  layout.ts  projectContext.tsx
frontend/lib/hooks/: useCompanion.ts  useFeatureDetail.ts  useFeatureGraph.ts
infra/sql/: feedback.sql  init.sql
plugins/compression/default_compressor/: plugin.json  plugin.py
plugins/extractors/: _base.py
plugins/extractors/auth_detector/: plugin.json  plugin.py
plugins/extractors/billing_detector/: plugin.json  plugin.py
plugins/extractors/workflow_detector/: plugin.json  plugin.py
plugins/parsers/java_parser/: plugin.json  plugin.py
plugins/parsers/python_parser/: plugin.json  plugin.py
plugins/parsers/ruby_parser/: plugin.json  plugin.py
plugins/parsers/typescript_parser/: plugin.json  plugin.py
plugins/runtime/otel_plugin/: plugin.json  plugin.py
src/companion/: cli.py  config.py
src/companion/api/: auth.py  main.py  telemetry.py
src/companion/api/routes/: analysis_detail.py  benchmark.py  chat.py  chat_feedback.py  code.py  context.py  docs.py  features.py  graph.py  ingest.py  plugins.py  runtime.py  search.py  tour.py  webhooks.py
src/companion/core/: deduplication.py  queue.py
src/companion/core/agents/: ai_compressor.py  architecture_analyzer.py  feature_extractor.py  file_analyzer.py  graph_builder.py  pipeline.py  project_scanner.py
src/companion/core/engine/: core_engine.py  plugin_manager.py
src/companion/graph/: compressor.py  neo4j_client.py
src/companion/graph/models/: nodes.py
src/companion/sdk/: registry.py
src/companion/sdk/base/: __init__.py  compression_plugin.py  integration_plugin.py  plugin_base.py
src/feature_graph/: cli.py  config.py
src/feature_graph/api/routes/: analysis.py  chat.py  plugins.py
src/feature_graph/core/agents/: pipeline.py
src/feature_graph/sdk/base/: doc_plugin.py
tests/unit/: test_deduplication.py  test_event_bus.py  test_graph_models.py  test_ingest.py  test_job_scheduler.py  test_plugin_registry.py  test_project_scanner.py  test_python_parser.py  test_typescript_parser.py
